--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="title">Totally trivial trivia
+    <div id="title">Totally Java Trivia
         <div id="display"></div>
         <footer>Raymundo Ojeda&copy;</footer>
 		<img class="images" alt="correct" id="correctpic" src="https://i.giphy.com/media/j2PS9MGm85WkE/giphy.webp">
